fix jumping issue on first load

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -13,6 +13,10 @@ body {
             }
         }
 
+        .home {
+            min-height: 442px;
+        }
+
         .characters-table {
             min-height: $table-height;
 
